<resources>
    <string name="app_name">Bangalore Traffic Violations</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Bangalore_traffic_police">Bangalore Traffic Violations</string>
    <string name="public_eye_post">Public Eye Violation Post</string>
    <string name="visit_web">Visit Website</string>
    <string name="pay_fine">Pay Violation Notice</string>
    <string name="share">Share </string>
    <string name="developer">Developer</string>
    <string name="search_violations">Search Violations</string>
    <string name="develper_details">Name:\tNIRANJAN DHOOLI\nMob:\t9538266400\nMail Id:\tniranjan.dhooli@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen">Bangalore Traffic Violations</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Bangalore Traffice\n Violations</string>
</resources>
