<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/search_violations"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_violations" />
        <item
            android:id="@+id/pay_fine"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/pay_fine" />
        <item
            android:id="@+id/public_post"
            android:icon="@drawable/ic_traffic_black_24dp"
            android:title="@string/public_eye_post" />
        <item
            android:id="@+id/visit_website"
            android:icon="@drawable/ic_web_asset_black_24dp"
            android:title="@string/visit_web" />
        <item
            android:id="@+id/developer"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/developer" />
    </group>


</menu>
